--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,24 @@ Resources/php.ini
 Project/Trash/
 Data
 Libraries
+
+# Data folder
+[dD][aA][tT][aA]/
+
+# Derived data
+DerivedData/
+
+# Libraries
+Libraries/
+
+# User preferences
+userPreferences.*/
+
+# Uncomment (remove the following # ) to ignore Trash
+Project/Trash
+
+
+# System files
+.DS_Store
+
+
