--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ Thumbs.db
 #--------------------------------
 Resources/php.ini
 Project/Trash/
+Data/Invoices.4DD
+Data/Invoices.4DIndx
+Data/Invoices.Match
